[project]
name = "identity-map-tech-sample-2"
version = "0.1.0"
description = "UID2 Identity Map v3 technical sample demonstrating email/phone to UID2 mapping with proper optout handling"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "uid2-client>=2.6.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
]
